[tool.poetry]
name = "phytotron"
version = "0.1.0"
description = "a greenhouse board application submitting bot "
authors = ["Yunis Yilmaz <yunis@yilmaz.nyc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scrapy = "^2.12.0"

[tool.poetry.group.test.dependencies]
ruff = "^0.8.1"
pyright = "^1.1.390"

[tool.ruff.lint]
extend-select = ["I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
